okta auth config init

--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "@nebular/eva-icons": "5.0.0",
     "@nebular/security": "5.0.0",
     "@nebular/theme": "5.0.0",
+    "@okta/okta-angular": "^2.0.0",
     "@swimlane/ngx-charts": "^13.0.2",
+    "angular-oauth2-oidc": "^9.2.0",
+    "angular-oauth2-oidc-jwks": "^9.0.0",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
