--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@nebular/eva-icons": "4.1.2",
     "@nebular/security": "4.1.2",
     "@nebular/theme": "4.1.2",
+    "@okta/okta-angular": "^2.0.0",
     "@swimlane/ngx-charts": "^10.0.0",
+    "angular-oauth2-oidc": "^9.2.0",
+    "angular-oauth2-oidc-jwks": "^9.0.0",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^7.0.0",
